# george-hacks2026

./: .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  vitals.json
app/: globals.css
app/api/lab-reports/[reportId]/: route.ts
app/api/lab-reports/[reportId]/parse/: route.ts
app/api/lab-reports/latest/: route.ts
app/api/meal-scans/: route.ts
app/api/meal-scans/[mealScanId]/image/: route.ts
app/api/vitals/: route.ts
app/api/vitals/recommendation/: route.ts
app/dashboard/: dashboard-view.tsx  mock-data.ts  page.tsx  types.ts
app/onboarding/: page.tsx
app/tdee/: page.tsx  tdee-calculator.tsx
lib/: env.ts  meal-scans.ts  mongodb.ts  tdee-storage.ts  tdee.ts  vitals.ts
presage-companion/: CMakeCache.txt  CMakeLists.txt  live_vitals  live_vitals.cpp  setup_presage_sdk.sh
